<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistrationActivity">

    <TextView
        android:id="@+id/tv_nama_panggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/nama_panggilan_title_text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/et_nama_panggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/hint_et_nama_panggilan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_panggilan" />

    <TextView
        android:id="@+id/tv_umur_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/tv_umur_title"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nama_panggilan"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/et_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/hint_et_umur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_umur_title" />

    <Button
        android:id="@+id/btn_selanjutnya"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_selanjutnya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>